--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 antialiased transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+
+<script type="module" src="firebase.js"></script>
+
   </body>
 </html>
