--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SportTrack</title>
 
-    <!-- Tailwind CDN (aviso de produção pode ser ignorado) -->
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- Fontes -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <style>
       :root {
-        --color-primary: #2563eb; /* Default Blue 600 */
+        --color-primary: #2563eb;
       }
     </style>
 
@@ -22,13 +19,8 @@
         darkMode: 'class',
         theme: {
           extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-            },
-            colors: {
-              primary: 'var(--color-primary)',
-              secondary: '#0f172a',
-            }
+            fontFamily: { sans: ['Inter', 'sans-serif'] },
+            colors: { primary: 'var(--color-primary)', secondary: '#0f172a' }
           }
         }
       }
@@ -39,11 +31,7 @@
       "imports": {
         "react": "https://aistudiocdn.com/react@^19.2.0",
         "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "react/": "https://aistudiocdn.com/react@^19.2.0/",
-        "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
-        "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
-        "vite": "https://aistudiocdn.com/vite@^7.2.4",
-        "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+        "react/": "https://aistudiocdn.com/react@^19.2.0/"
       }
     }
     </script>
@@ -52,10 +40,7 @@
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 antialiased transition-colors duration-300">
     <div id="root"></div>
 
-    <!-- Firebase primeiro -->
     <script type="module" src="firebase.js"></script>
-
-    <!-- React App depois -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
