--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SportTrack</title>
 
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -38,8 +39,32 @@
   </head>
 
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 antialiased transition-colors duration-300">
-    <div id="root"></div>
 
+    <!-- HEADER / MENU EXISTENTE -->
+    <header class="bg-primary text-white p-4">
+      <h1 class="text-3xl font-bold">SportTrack</h1>
+    </header>
+
+    <main class="p-6">
+      <!-- SEÇÃO EXISTENTE DO SITE -->
+      <section class="mb-8">
+        <h2 class="text-2xl font-semibold mb-2">Bem-vindo ao SportTrack</h2>
+        <p>Esta é a página principal com o layout que já tinhas feito.</p>
+      </section>
+
+      <!-- INVENTORY REACT -->
+      <section>
+        <h2 class="text-2xl font-semibold mb-4">Inventário de Equipamentos</h2>
+        <div id="inventory-root"></div>
+      </section>
+    </main>
+
+    <!-- FOOTER EXISTENTE -->
+    <footer class="bg-slate-900 text-white p-4 text-center">
+      &copy; 2025 SportTrack
+    </footer>
+
+    <!-- Firebase + React -->
     <script type="module" src="firebase.js"></script>
     <script type="module" src="/index.tsx"></script>
   </body>
