--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       }
     }
     </script>
+
+    <!-- O teu CSS original (se existir) -->
+    <link rel="stylesheet" href="/index.css">
   </head>
 
   <body class="bg-slate-50 text-slate-900 dark:bg-slate-950 dark:text-slate-100 antialiased transition-colors duration-300">
@@ -43,20 +46,23 @@
     <!-- HEADER / MENU EXISTENTE -->
     <header class="bg-primary text-white p-4">
       <h1 class="text-3xl font-bold">SportTrack</h1>
+      <!-- Podes manter o menu/navegação que já tinhas -->
     </header>
 
     <main class="p-6">
-      <!-- SEÇÃO EXISTENTE DO SITE -->
+      <!-- SEÇÕES EXISTENTES DA PÁGINA -->
       <section class="mb-8">
         <h2 class="text-2xl font-semibold mb-2">Bem-vindo ao SportTrack</h2>
-        <p>Esta é a página principal com o layout que já tinhas feito.</p>
+        <p>Esta é a página principal com todo o layout que tinhas feito.</p>
       </section>
 
       <!-- INVENTORY REACT -->
-      <section>
+      <section class="mb-8">
         <h2 class="text-2xl font-semibold mb-4">Inventário de Equipamentos</h2>
         <div id="inventory-root"></div>
       </section>
+
+      <!-- OUTRAS SEÇÕES EXISTENTES -->
     </main>
 
     <!-- FOOTER EXISTENTE -->
